--- a/app.json
+++ b/app.json
@@ -1,46 +1,47 @@
 {
-  "pages": [
-    "pages/classic/classic",
-    "pages/book/book",
-    "pages/my/my"
-  ],
-  "requiredBackgroundModes": [
-    "audio"
-  ],
-  "tabBar": {
-    "color": "",
-    "selectedColor": "",
-    "backgroundColor": "",
-    "position": "bottom",
-    "borderStyle": "black",
-    "list": [
-      {
-        "pagePath": "pages/classic/classic",
-        "text": "流行",
-        "iconPath": "/images/tab/classic.png",
-        "selectedIconPath": "/images/tab/classic@highlight.png"
-      },
-      {
-        "pagePath": "pages/book/book",
-        "text": "书籍",
-        "iconPath": "/images/tab/book.png",
-        "selectedIconPath": "/images/tab/book@highlight.png"
-      },
-      {
-        "pagePath": "pages/my/my",
-        "text": "我的",
-        "iconPath": "/images/tab/my.png",
-        "selectedIconPath": "/images/tab/my@highlight.png"
-      }
-    ]
-  },
-  "window": {
-    "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "小程序",
-    "backgroundColor": "#000",
-    "backgroundTextStyle": "light",
-    "enablePullDownRefresh": false,
-    "pageOrientation": "portrait"
-  }
+    "pages": [
+        "pages/book/book",
+        "pages/classic/classic",
+        "pages/my/my",
+        "pages/book-detail/book-detail"
+    ],
+    "requiredBackgroundModes": [
+        "audio"
+    ],
+    "tabBar": {
+        "color": "",
+        "selectedColor": "",
+        "backgroundColor": "",
+        "position": "bottom",
+        "borderStyle": "black",
+        "list": [
+            {
+                "pagePath": "pages/book/book",
+                "text": "书籍",
+                "iconPath": "/images/tab/book.png",
+                "selectedIconPath": "/images/tab/book@highlight.png"
+            },
+            {
+                "pagePath": "pages/classic/classic",
+                "text": "流行",
+                "iconPath": "/images/tab/classic.png",
+                "selectedIconPath": "/images/tab/classic@highlight.png"
+            },
+            {
+                "pagePath": "pages/my/my",
+                "text": "我的",
+                "iconPath": "/images/tab/my.png",
+                "selectedIconPath": "/images/tab/my@highlight.png"
+            }
+        ]
+    },
+    "window": {
+        "navigationBarBackgroundColor": "#ffffff",
+        "navigationBarTextStyle": "black",
+        "navigationBarTitleText": "小程序",
+        "backgroundColor": "#000",
+        "backgroundTextStyle": "light",
+        "enablePullDownRefresh": false,
+        "pageOrientation": "portrait"
+    }
 }
