--- a/app.json
+++ b/app.json
@@ -3,7 +3,9 @@
         "pages/book/book",
         "pages/classic/classic",
         "pages/my/my",
-        "pages/book-detail/book-detail"
+        "pages/book-detail/book-detail",
+        "pages/about/about",
+        "pages/course/course"
     ],
     "requiredBackgroundModes": [
         "audio"
