--- a/project.config.json
+++ b/project.config.json
@@ -37,13 +37,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "书本详情",
 					"pathName": "pages/book-detail/book-detail",
 					"query": "bid=1",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "我的",
+					"pathName": "pages/my/my",
 					"scene": null
 				}
 			]
